Fix/panic on embedded binding (#9)
* Embedded types properly resolve when calling ToBindingValue()

* #8 Can customize handler for when we recover from panics.
