# internal/testext/gen/sample_service.gen.openapi.yml
@@ -1,6 +1,6 @@
 # Code generated by Abide - DO NOT EDIT.
 #
-#   Timestamp: Tue, 11 Jul 2023 10:09:24 EDT
+#   Timestamp: Tue, 18 Jul 2023 14:29:22 EDT
 #   Source:    sample_service.go
 #   Generator: https:#github.com/monadicstack/abide
 #
@@ -441,6 +441,32 @@ paths:
     
     
     
+    "/SampleService.Panic":
+        post:
+            description: > 
+                Panic um... panics. It never succeeds. It always behaves like me when I'm on a high place looking down.
+            
+
+            
+            requestBody:
+                content:
+                     application/json:
+                         schema:
+                             $ref: '#/components/schemas/SampleRequest'
+            
+
+            responses:
+                200:
+                    description: Success
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/SampleResponse'
+    
+    
+    
+    
+    
     "/redirect":
         get:
             description: > 
@@ -603,18 +629,28 @@ paths:
 components:
     schemas:
         
-        time.Duration:
+        CustomDuration:
             type: number
             
         
-        SampleDownloadRequest:
+        time.Time:
+            type: object
+            
+        
+        SampleSecurityRequest:
             type: object
             
             properties:
                 
-                Format:
+                ID:
                     type: string
                     
+                    
+                    
+                
+                User:
+                    
+                    $ref: "#/components/schemas/SampleUser"
                     
                     
                 
@@ -643,147 +679,6 @@ components:
                 
             
         
-        SampleComplexRequest:
-            type: object
-            
-            properties:
-                
-                InUser:
-                    
-                    $ref: "#/components/schemas/SampleUser"
-                    
-                    
-                
-                InFlag:
-                    type: boolean
-                    
-                    
-                    
-                
-                InFloat:
-                    type: number
-                    
-                    
-                    
-                
-                InTime:
-                    
-                    $ref: "#/components/schemas/time.Time"
-                    
-                    
-                
-                InTimePtr:
-                    
-                    $ref: "#/components/schemas/time.Time"
-                    
-                    
-                
-            
-        
-        time.Time:
-            type: object
-            
-        
-        SampleComplexResponse:
-            type: object
-            
-            properties:
-                
-                OutFlag:
-                    type: boolean
-                    
-                    
-                    
-                
-                OutFloat:
-                    type: number
-                    
-                    
-                    
-                
-                OutUser:
-                    
-                    $ref: "#/components/schemas/SampleUser"
-                    
-                    
-                
-                OutTime:
-                    
-                    $ref: "#/components/schemas/time.Time"
-                    
-                    
-                
-                OutTimePtr:
-                    
-                    $ref: "#/components/schemas/time.Time"
-                    
-                    
-                
-            
-        
-        SampleRequest:
-            type: object
-            
-            properties:
-                
-                ID:
-                    type: string
-                    
-                    
-                    
-                
-                Text:
-                    type: string
-                    
-                    
-                    
-                
-            
-        
-        CustomDuration:
-            type: number
-            
-        
-        MarshalToString:
-            type: object
-            
-            properties:
-                
-                Home:
-                    type: string
-                    
-                    
-                    description: > 
-                        Home is supposed to be a home email address.
-                    
-                
-                Work:
-                    type: string
-                    
-                    
-                    description: > 
-                        Work is supposed to be a home email address.
-                    
-                
-            
-        
-        SampleSecurityResponse:
-            type: object
-            
-            properties:
-                
-                Roles:
-                    type: array
-                    
-                    
-                    items:
-                        type: string
-                        
-                    
-                    
-                
-            
-        
         SampleResponse:
             type: object
             
@@ -803,8 +698,17 @@ components:
                 
             
         
-        SampleRedirectRequest:
+        SampleDownloadRequest:
             type: object
+            
+            properties:
+                
+                Format:
+                    type: string
+                    
+                    
+                    
+                
             
         
         SampleRedirectResponse:
@@ -818,10 +722,6 @@ components:
                     
                     
                 
-            
-        
-        SampleDownloadResponse:
-            type: object
             
         
         SampleUser:
@@ -896,7 +796,116 @@ components:
                 
             
         
-        SampleSecurityRequest:
+        SampleComplexResponse:
+            type: object
+            
+            properties:
+                
+                OutFlag:
+                    type: boolean
+                    
+                    
+                    
+                
+                OutFloat:
+                    type: number
+                    
+                    
+                    
+                
+                OutUser:
+                    
+                    $ref: "#/components/schemas/SampleUser"
+                    
+                    
+                
+                OutTime:
+                    
+                    $ref: "#/components/schemas/time.Time"
+                    
+                    
+                
+                OutTimePtr:
+                    
+                    $ref: "#/components/schemas/time.Time"
+                    
+                    
+                
+            
+        
+        time.Duration:
+            type: number
+            
+        
+        SampleRedirectRequest:
+            type: object
+            
+        
+        SampleComplexRequest:
+            type: object
+            
+            properties:
+                
+                InUser:
+                    
+                    $ref: "#/components/schemas/SampleUser"
+                    
+                    
+                
+                InFlag:
+                    type: boolean
+                    
+                    
+                    
+                
+                InFloat:
+                    type: number
+                    
+                    
+                    
+                
+                InTime:
+                    
+                    $ref: "#/components/schemas/time.Time"
+                    
+                    
+                
+                InTimePtr:
+                    
+                    $ref: "#/components/schemas/time.Time"
+                    
+                    
+                
+            
+        
+        MarshalToString:
+            type: object
+            
+            properties:
+                
+                Home:
+                    type: string
+                    
+                    
+                    description: > 
+                        Home is supposed to be a home email address.
+                    
+                
+                Work:
+                    type: string
+                    
+                    
+                    description: > 
+                        Work is supposed to be a home email address.
+                    
+                
+            
+        
+        SampleDownloadResponse:
+            type: object
+            
+        
+        SampleRequest:
             type: object
             
             properties:
@@ -907,9 +916,26 @@ components:
                     
                     
                 
-                User:
+                Text:
+                    type: string
                     
-                    $ref: "#/components/schemas/SampleUser"
+                    
+                    
+                
+            
+        
+        SampleSecurityResponse:
+            type: object
+            
+            properties:
+                
+                Roles:
+                    type: array
+                    
+                    
+                    items:
+                        type: string
+                        
                     
                     
                 
