# internal/testext/gen/sample_service.gen.server.go
@@ -1,6 +1,6 @@
 // Code generated by Abide - DO NOT EDIT.
 //
-//	Timestamp: Tue, 11 Jul 2023 10:09:22 EDT
+//	Timestamp: Tue, 18 Jul 2023 14:29:20 EDT
 //	Source:    sample_service.go
 //	Generator: https://github.com/monadicstack/abide
 package testext
@@ -370,6 +370,28 @@ func SampleServiceServer(handler testext.SampleService, middleware ...services.M
 				}),
 				Roles:  []string{},
 				Routes: []services.EndpointRoute{},
+			},
+
+			{
+				ServiceName: "SampleService",
+				Name:        "Panic",
+				NewInput:    func() services.StructPointer { return &testext.SampleRequest{} },
+				Handler: middlewareFuncs.Then(func(ctx context.Context, req any) (any, error) {
+					typedReq, ok := req.(*testext.SampleRequest)
+					if !ok {
+						return nil, fail.Unexpected("invalid request argument type")
+					}
+					return handler.Panic(ctx, typedReq)
+				}),
+				Roles: []string{},
+				Routes: []services.EndpointRoute{
+					{
+						GatewayType: "API",
+						Method:      "POST",
+						Path:        "/v2/SampleService.Panic",
+						Status:      200,
+					},
+				},
 			},
 
 			{
